# ann_mnist

./: CMakeLists.txt  README.md
data/: getdata.sh
src/: MNISTDB.cc  MNISTDB.hh  ann.cc  ann.hh  main.cc
